New in FAI 2.2.3

    - added disk configuration for Beowulf nodes
    - minor bug fixes
    - Wake on LAN section added to FAI guide
    - reiserfs support in setup_harddisks (thanks to Diane Trout)
    - make-fai-nfsroot -v output can be redirected to a file
    - woody support improved
    - sysinfo also uses detect and discover to probe for hardware

New in FAI 2.2.2

    - bug fix: getting dhcp information
    - added jmon to BEOWULF

New in FAI 2.2.1

    - FAI_FLAGS can be space or comma separated. They must be space
      separated in bootptab. Use a comma to separate them as
      additional kernel parameters.
    - bootp requests on multiple ethernet devices show device name
      (Thanks to Geert Stappers)
    - script all_hosts doesn't use hardcoded list of hosts any more;
      now it uses the netgroup allhosts

New in FAI 2.2

    - the fai guide has a new chapter about building a Beowulf cluster
    - new utilities for Beowulf cluster: all_hosts and rshall
    - new utility softupdate for updating packages on a running system
    - improved example for diskless hook
    - major reorganization of the rcS_fai code; most parts are moved
      to the subroutines file
    - source /fai/hooks/subroutines if file exists; here you can define
      your own subroutines or redefine FAI's subroutines
    - most tasks are now executed via task() and the name of the task
      as option. This subroutine looks for a hook with the given name
      and executes it. Hooks can skip the default task of FAI (called
      task_<name>) by using skiptask(). So, hooks can replace the
      default behavior, and not only add functions to the
      installation process
    - hooks can define classes by writing class names to
      /tmp/additional-classes and variable by writing line to
      /tmp/additional.var 
    - new hooks/tasks added
    - classes and variables are now defined in the very beginning
      before task_action is called and $FAI_ACTION is evaluated