@@ -1,7 +1,7 @@
 etc
 usr/sbin
 usr/share/doc/fai/examples
-usr/share/doc/fai/utils
+usr/share/fai/utils
 usr/share/fai/templates
 usr/lib/fai/sbin
 usr/lib/fai/etc
