@@ -54,7 +54,7 @@ binary-indep: build install
 	dh_fixperms
 	chmod a+rx ${DESTDIR}/usr/share/fai/templates/class/S[0-9]*.{sh,pl}
 	chmod a+rx ${DESTDIR}/usr/share/fai/templates/scripts/*
-	chmod a+rx ${DESTDIR}/usr/share/doc/fai/utils/*
+	chmod a+rx ${DESTDIR}/usr/share/fai/utils/*
 	chmod a+rx ${DESTDIR}/usr/lib/fai/sbin/rcS_fai
 	perl -pi -e 's/FAIVERSIONSTRING/$(VERSIONSTRING)/' ${DESTDIR}/usr/share/doc/fai/README
 	find ${DESTDIR} -name CVS |xargs rm -rf
