@@ -14,6 +14,7 @@ fai (2.2.3pre) unstable; urgency=low
   * reiserfs patch added to setup_harddisks
   * nfs-user-server support for woody
   * DEFAULT: scratch directories are writeable for all users
+  * utils moved from doc directory to /usr/share/fai
   
  -- Thomas Lange <lange@debian.org>  Thu,  8 Nov 2001 17:01:02 +0100
 
