@@ -7,6 +7,7 @@ New in FAI 2.2.3
     - make-fai-nfsroot -v output can be redirected to a file
     - woody support improved
     - sysinfo also uses detect and discover to probe for hardware
+    - utilities moved to /usr/share/fai/utils
 
 New in FAI 2.2.2
 
